# AedsTPII

./: CMakeLists.txt  LICENSE  README.md  TODO
src/: CMakeLists.txt  aSerInserido.c  city.c  city.h  citystack.c  citystack.h  generator.c  generator.h  main.c  path.c  path.h  route.c  route.h  saida.txt  truck.c  truck.h
tests/: CMakeLists.txt  testing_main.c
