enable_testing()
find_package(Check REQUIRED)
include_directories(${CHECK_INCLUDE_DIRS})
set(LIBS ${LIBS} ${CHECK_LIBRARIES} CaixeiroViajanteComMochila)
include_directories(. ../src)
file(GLOB TESTS_SOURCES ./*.c)
file(GLOB TESTS_HEADERS ./*.h)
add_executable(test_CaixeiroViajanteComMochila ${TESTS_SOURCES} ${TESTS_HEADERS})
target_link_libraries(test_CaixeiroViajanteComMochila ${LIBS} )
add_test(test_CaixeiroViajanteComMochila ${CMAKE_CURRENT_BINARY_DIR}/test_CaixeiroViajanteComMochila)
